[gd_scene load_steps=7 format=3 uid="uid://cfwbn1expd5ho"]

[ext_resource type="Script" uid="uid://clkbtbldnjkhh" path="res://Scenes/Towers/base_tower.gd" id="1_yji8t"]
[ext_resource type="PackedScene" uid="uid://c6hijlinaypil" path="res://Scenes/Towers/Projectiles/base_projectile.tscn" id="2_jviep"]
[ext_resource type="Texture2D" uid="uid://csfaw2blqjs8v" path="res://Assets/Dev/green16x16.png" id="3_jviep"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jviep"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m8eit"]
radius = 90.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8u7oj"]
size = Vector2(34, 55)

[node name="BaseTower" type="Area2D"]
z_index = 1
collision_mask = 0
script = ExtResource("1_yji8t")
projectile = ExtResource("2_jviep")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jviep")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_jviep")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_m8eit")

[node name="AttackTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="ClickableArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickableArea"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_8u7oj")

[connection signal="area_entered" from="AttackRange" to="." method="_on_attack_range_area_entered"]
[connection signal="area_exited" from="AttackRange" to="." method="_on_attack_range_area_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="input_event" from="ClickableArea" to="." method="_on_clickable_area_input_event"]
